--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, height=device-height, minimum-scale=1.0, maximum-scale=1.0" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <title>Shopping website template</title>
+    <meta name="description" content="E.C.SHOP. is the largest online store in Christchurch"/>
+    <meta name="keywords" content="women's clothing, man's clothing, electronics, jewelery">
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <title>E.C.SHOP. Online shopping, convenience, better prices, more variety </title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
