--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,10 @@
     <meta name="description" content="E.C.SHOP. is the largest online store in Christchurch"/>
     <meta name="keywords" content="women's clothing, man's clothing, electronics, jewelery">
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <title>E.C.SHOP. Online shopping, convenience, better prices, more variety </title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
 </html>
